+ added Paul's open data story post

--- a/_config.yml
+++ b/_config.yml
@@ -3,4 +3,4 @@ pygments:    false
 lsi:         false
 markdown:    rdiscount
 permalink:   pretty
-exclude:     .rvmrc, .gitignore, .git, ./test, 2011-8-2-meeting-with-cdo-brett-goldstein.textile
+exclude:     .rvmrc, .gitignore, .git, ./test
